# eora_test2

./: Makefile  README.md  eora.ipynb  pyproject.toml  table.csv
