[tool.poetry]
name = "eora-test2"
version = "0.1.0"
description = ""
authors = ["Anton Semenov <s.anton@live.ru>"]
readme = "README.md"
packages = [{include = "eora_test2"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.2"
pandas = "^1.5.2"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
